@@ -1,3 +1,11 @@
+2005-12-03  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/test/listener.py:
+	* kiwi/ui/test/player.py:
+
+	Improve the generated output format to be readable, remove
+	some old stuff.
+
 2005-12-02  Johan Dahlin  <jdahlin@async.com.br>
 
 	* bin/kiwi-ui-test:
